src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dwP0.25-dhF500-t.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault column width: P0.25\ndefault window height: F500\ntabbed"
expression: snapshot
---
initial configure:
size: 320 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
